# liquid-democracy

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
agents/: llm_bridge.py  media_agent.py  voter_agent.py
dashboard/: app.py  distribution_panels.py  llm_analysis.py  network_viz.py
data/: ces_loader.py  districts.py
engine/: delegation_graph.py  opinion_dynamics.py  seeding.py  simulation.py  trust.py
scenarios/: baseline.py  celebrity.py  hub_attack.py  k2_mitigation.py  stale_decay.py
scripts/: parameter_sweep.py  run_simulation.py
tally/: delegation_tally.py  fptp.py  rcv.py  runner.py  trs.py
tasks/: todo.md
tests/: test_dashboard_contracts.py  test_delegation_graph.py  test_opinion_dynamics.py  test_seeding.py  test_simulation.py  test_tallies.py  test_wiring.py
